--- a/Design Pattern/Deco/FactoryMethodAndSington/FactoryMethodAndSington.vcxproj.filters
+++ b/Design Pattern/Deco/FactoryMethodAndSington/FactoryMethodAndSington.vcxproj.filters
@@ -120,6 +120,9 @@
     <ClCompile Include="CpuMonitor\SearchCpu.cpp">
       <Filter>Source Files\Module\Navi\CpuMonitor</Filter>
     </ClCompile>
+    <ClCompile Include="AVNServiceFacade.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Store\Store.h">
@@ -190,6 +193,9 @@
     </ClInclude>
     <ClInclude Include="CpuMonitor\SearchCpu.h">
       <Filter>Source Files\Module\Navi\CpuMonitor</Filter>
+    </ClInclude>
+    <ClInclude Include="AVNServiceFacade.h">
+      <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
