--- a/Design Pattern/Deco/FactoryMethodAndSington/FactoryMethodAndSington.vcxproj
+++ b/Design Pattern/Deco/FactoryMethodAndSington/FactoryMethodAndSington.vcxproj
@@ -119,6 +119,7 @@
     <ClCompile Include="AudioModeMobis.cpp" />
     <ClCompile Include="AudioModuleLG.cpp" />
     <ClCompile Include="AVNServiceFacade.cpp" />
+    <ClCompile Include="CDrawCache.cpp" />
     <ClCompile Include="Client.cpp" />
     <ClCompile Include="CpuMonitor\MapDisplayCpu.cpp" />
     <ClCompile Include="CpuMonitor\NaviCpu.cpp" />
@@ -143,6 +144,7 @@
     <ClInclude Include="AudioModeMobis.h" />
     <ClInclude Include="AudioModuleLG.h" />
     <ClInclude Include="AVNServiceFacade.h" />
+    <ClInclude Include="CDrawCache.h" />
     <ClInclude Include="CpuMonitor\MapDisplayCpu.h" />
     <ClInclude Include="CpuMonitor\ModuleCpu.h" />
     <ClInclude Include="CpuMonitor\NaviCpu.h" />
