--- a/Design Pattern/Deco/FactoryMethodAndSington/FactoryMethodAndSington.vcxproj
+++ b/Design Pattern/Deco/FactoryMethodAndSington/FactoryMethodAndSington.vcxproj
@@ -119,12 +119,16 @@
     <ClCompile Include="AudioModeMobis.cpp" />
     <ClCompile Include="AudioModuleLG.cpp" />
     <ClCompile Include="AVNServiceFacade.cpp" />
+    <ClCompile Include="BuyExpression.cpp" />
     <ClCompile Include="CDrawCache.cpp" />
     <ClCompile Include="Client.cpp" />
     <ClCompile Include="CpuMonitor\MapDisplayCpu.cpp" />
     <ClCompile Include="CpuMonitor\NaviCpu.cpp" />
     <ClCompile Include="CpuMonitor\RoutePlanningCpu.cpp" />
     <ClCompile Include="CpuMonitor\SearchCpu.cpp" />
+    <ClCompile Include="Expression.cpp" />
+    <ClCompile Include="HowMuchExpression.cpp" />
+    <ClCompile Include="Kiosk.cpp" />
     <ClCompile Include="MemoryMonitor\MapDisplayMemory.cpp" />
     <ClCompile Include="MemoryMonitor\NaviMemory.cpp" />
     <ClCompile Include="MemoryMonitor\RoutePlanningMemory.cpp" />
@@ -135,6 +139,7 @@
     <ClCompile Include="NaviModuleMobis.cpp" />
     <ClCompile Include="StoreAdapter.cpp" />
     <ClCompile Include="Store\Store.cpp" />
+    <ClCompile Include="VendorExpression.cpp" />
     <ClCompile Include="VideoFactory.cpp" />
     <ClCompile Include="VideoModuleLG.cpp" />
     <ClCompile Include="VideoModuleMobis.cpp" />
@@ -144,12 +149,16 @@
     <ClInclude Include="AudioModeMobis.h" />
     <ClInclude Include="AudioModuleLG.h" />
     <ClInclude Include="AVNServiceFacade.h" />
+    <ClInclude Include="BuyExpression.h" />
     <ClInclude Include="CDrawCache.h" />
     <ClInclude Include="CpuMonitor\MapDisplayCpu.h" />
     <ClInclude Include="CpuMonitor\ModuleCpu.h" />
     <ClInclude Include="CpuMonitor\NaviCpu.h" />
     <ClInclude Include="CpuMonitor\RoutePlanningCpu.h" />
     <ClInclude Include="CpuMonitor\SearchCpu.h" />
+    <ClInclude Include="Expression.h" />
+    <ClInclude Include="HowMuchExpression.h" />
+    <ClInclude Include="Kiosk.h" />
     <ClInclude Include="MemoryMonitor\MapDisplayMemory.h" />
     <ClInclude Include="MemoryMonitor\ModuleMemory.h" />
     <ClInclude Include="MemoryMonitor\NaviMemory.h" />
@@ -162,6 +171,7 @@
     <ClInclude Include="NaviModuleMobis.h" />
     <ClInclude Include="StoreAdapter.h" />
     <ClInclude Include="Store\Store.h" />
+    <ClInclude Include="VendorExpression.h" />
     <ClInclude Include="VideoModuleLG.h" />
     <ClInclude Include="VideoFactory.h" />
     <ClInclude Include="VideoModuleMobis.h" />
