--- a/Design Pattern/Deco/FactoryMethodAndSington/FactoryMethodAndSington.vcxproj.filters
+++ b/Design Pattern/Deco/FactoryMethodAndSington/FactoryMethodAndSington.vcxproj.filters
@@ -147,6 +147,9 @@
     <ClCompile Include="Kiosk.cpp">
       <Filter>Source Files\Interpreter</Filter>
     </ClCompile>
+    <ClCompile Include="CDrawer.cpp">
+      <Filter>Source Files\Module\Navi\DrawCache</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Store\Store.h">
@@ -238,6 +241,12 @@
     </ClInclude>
     <ClInclude Include="Kiosk.h">
       <Filter>Source Files\Interpreter</Filter>
+    </ClInclude>
+    <ClInclude Include="CDrawer.h">
+      <Filter>Source Files\Module\Navi\DrawCache</Filter>
+    </ClInclude>
+    <ClInclude Include="DrawerMD.h">
+      <Filter>Source Files\Module\Navi\DrawCache</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
