--- a/Design Pattern/Deco/FactoryMethodAndSington/FactoryMethodAndSington.vcxproj
+++ b/Design Pattern/Deco/FactoryMethodAndSington/FactoryMethodAndSington.vcxproj
@@ -134,10 +134,13 @@
     <ClCompile Include="MemoryMonitor\NaviMemory.cpp" />
     <ClCompile Include="MemoryMonitor\RoutePlanningMemory.cpp" />
     <ClCompile Include="MemoryMonitor\SearchMemory.cpp" />
+    <ClCompile Include="ModuleItem.cpp" />
     <ClCompile Include="NaviFactory.cpp" />
+    <ClCompile Include="NaviInitMediator.cpp" />
     <ClCompile Include="NaviModule.cpp" />
     <ClCompile Include="NaviModuleLG.cpp" />
     <ClCompile Include="NaviModuleMobis.cpp" />
+    <ClCompile Include="InitMediator.cpp" />
     <ClCompile Include="StoreAdapter.cpp" />
     <ClCompile Include="Store\Store.cpp" />
     <ClCompile Include="VendorExpression.cpp" />
@@ -160,18 +163,23 @@
     <ClInclude Include="CpuMonitor\SearchCpu.h" />
     <ClInclude Include="DrawerMD.h" />
     <ClInclude Include="Expression.h" />
+    <ClInclude Include="InitMediator.h" />
     <ClInclude Include="HowMuchExpression.h" />
+    <ClInclude Include="ISModule.h" />
     <ClInclude Include="Kiosk.h" />
     <ClInclude Include="MemoryMonitor\MapDisplayMemory.h" />
     <ClInclude Include="MemoryMonitor\ModuleMemory.h" />
     <ClInclude Include="MemoryMonitor\NaviMemory.h" />
     <ClInclude Include="MemoryMonitor\RoutePlanningMemory.h" />
     <ClInclude Include="MemoryMonitor\SearchMemory.h" />
+    <ClInclude Include="ModuleItem.h" />
+    <ClInclude Include="NaviInitMediator.h" />
     <ClInclude Include="NaviModule.h" />
     <ClInclude Include="Module.h" />
     <ClInclude Include="NaviFactory.h" />
     <ClInclude Include="NaviModuleLG.h" />
     <ClInclude Include="NaviModuleMobis.h" />
+    <ClInclude Include="RPModule.h" />
     <ClInclude Include="StoreAdapter.h" />
     <ClInclude Include="Store\Store.h" />
     <ClInclude Include="VendorExpression.h" />
